src/test/ui/chalkify/impl_wf.stderr
error[E0277]: the trait bound `f32: Foo` is not satisfied
  --> $DIR/impl_wf.rs:43:6
   |
LL | trait Baz<U: ?Sized> where U: Foo { }
   |                               --- required by this bound in `Baz`
...
LL | impl Baz<f32> for f32 { }
   |      ^^^^^^^^ the trait `Foo` is not implemented for `f32`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
